# seodisparate.com_comments_backend

./: LICENSE  README.txt
.github/: dependabot.yml
backend/: Cargo.toml  cross_build_to_aarch64.sh  example.config
backend/src/: arg_parse.rs  config.rs  error.rs  helper.rs  main.rs  signal.rs  sql.rs
frontend/: example.js
