[package]
name = "seodisparate_comments_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.88", features = ["affix-state"] }
reqwest = { version = "0.13", features = ["json", "native-tls-vendored", "query"] }
tokio = "1.49"
mysql = { version = "27.0", features = ["time"] }
uuid = { version = "1.20", features = ["v4"] }
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "formatting", "local-offset"] }
libc = "0.2"
