[package]
name = "seodisparate_comments_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.93", features = ["affix-state"] }
reqwest = { version = "0.13", features = ["json", "native-tls-vendored", "query"] }
tokio = "1.52"
uuid = { version = "1.23", features = ["v4"] }
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "formatting", "local-offset"] }
libc = "0.2"
msql_ffi = { git = "https://github.com/Stephen-Seo/PoorMansAnubis.git", rev = "c077e96ae71cb5b4c573399703b20e9816a5f92d" }
